<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView android:id="@+id/textPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedidos"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold|italic"
        android:textSize="25dp" />

    <Button android:id="@+id/btFazPed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fazer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <Button android:id="@+id/btVerPed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <Button android:id="@+id/btDelPed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

</LinearLayout>