<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EstVerEstoque">

    <item android:id="@+id/action_search"
        android:title="@string/actionSearch"
        compat:showAsAction="always"
        compat:actionViewClass="android.support.v7.widget.SearchView" />

        <!-- Outros botoes de refresh e settings !-->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:title="@string/actionRefresh"
        compat:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/actionSettings"
        compat:showAsAction="never" />

</menu>