<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView android:id="@+id/textFornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fornecedores"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold|italic"
        android:textSize="25dp" />

    <Button android:id="@+id/btAddFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="15dp"/>

    <Button android:id="@+id/btVerFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="15dp" />

    <Button android:id="@+id/btDelFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="15dp" />

</LinearLayout>